[package]
name = "bustle"
version = "0.4.1"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"
license = "Apache-2.0"

readme = "README.md"
description = "Benchmarking harness for concurrent key-value collections"
repository = "https://github.com/jonhoo/bustle.git"

keywords = ["concurrent","benchmark","harness"]
categories = ["concurrency", "development-tools::profiling", "development-tools::testing"]

[badges]
azure-devops = { project = "jonhoo/jonhoo", pipeline = "bustle", build = "18" }
maintenance = { status = "experimental" }

[dependencies]
rand = { version = "0.7", features = ["small_rng"] }
tracing = { version = "0.1", features = ["std"], default-features = false }

[dev-dependencies]
tracing-subscriber = "0.2"
num_cpus = "1"
dashmap = "3.11.7"
dashmapv4 = { package = "dashmap", version = "4.0.0-rc6" }
flurry = "0.3"
cht = "0.4"

[[bench]]
name = "arc_mutex_std"
harness = false

[[bench]]
name = "arc_rwlock_std"
harness = false

[[bench]]
name = "dashmapv3"
harness = false

[[bench]]
name = "dashmapv4"
harness = false

[[bench]]
name = "flurry"
harness = false

[[bench]]
name = "cht"
harness = false
