[package]
name = "bustle"
version = "0.4.1"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2018"
license = "Apache-2.0"

readme = "README.md"
description = "Benchmarking harness for concurrent key-value collections"
repository = "https://github.com/jonhoo/bustle.git"

keywords = ["concurrent", "benchmark", "harness"]
categories = ["concurrency", "development-tools::profiling", "development-tools::testing"]

[badges]
azure-devops = { project = "jonhoo/jonhoo", pipeline = "bustle", build = "18" }
maintenance = { status = "experimental" }

[dependencies]
rand = { version = "0.7", features = ["small_rng"] }
tracing = { version = "0.1", features = ["std"], default-features = false }

[dev-dependencies]
tracing-subscriber = "0.2"
num_cpus = "1"
dashmap = { version = "=3.11.10", features = ["no_std"] }
dashmapv4 = { package = "dashmap", version = "4.0.0-rc6" }
flurry = "0.3"
cht = "0.4"
cht1 = { package = "cht", version = "=0.1.2" }
contrie = "0.1"
fnv = "1.0"
intmap = "0.7"
ahash = "0.5"
shard_lock = { git = "https://github.com/L1AN0/shard_lock.git" }
sharded = { version = "0.0.6", features = ["parking_lot", "hashbrown", "ahash"] }
persia-sharded = { git = "https://github.com/NOBLES5E/persia-sharded.git" }
parking_lot = "0.11"
lru_time_cache = "0.11"
hashbrown = { version = "0.9", features = ["inline-more", "ahash"] }
hashbrown08 = { package = "hashbrown", version = "0.8", features = ["inline-more", "ahash"] }

[[bench]]
name = "arc_mutex_std"
harness = false

[[bench]]
name = "sharded"
harness = false

[[bench]]
name = "shard_lock"
harness = false

[[bench]]
name = "persia_sharded"
harness = false

[[bench]]
name = "arc_rwlock_std"
harness = false

[[bench]]
name = "dashmapv3"
harness = false

[[bench]]
name = "dashmapv4"
harness = false

[[bench]]
name = "flurry"
harness = false

[[bench]]
name = "cht"
harness = false

[[bench]]
name = "cht1"
harness = false

[[bench]]
name = "cht_segmented"
harness = false

[[bench]]
name = "contrie_clonemap"
harness = false

[[bench]]
name = "contrie"
harness = false

[[bench]]
name = "rwlock_intmap"
harness = false
